--- a/webapp/app/myPageNormal/normalreseiveMesseage.html
+++ b/webapp/app/myPageNormal/normalreseiveMesseage.html
@@ -41,89 +41,24 @@
         </nav>
         <nav class="mark_nav">
           <ul>
-            <li><input type="checkbox"></li>
-            <li class="name">
+            <li><input onclick="toggleMarksAll()" id="checkbox_col" name="mark_check_col" type="checkbox"></li>
+            <li class="name_col">
               <div>보낸 사람</div>
             </li>
-            <li class="messeagetitle">
+            <li class="location_col">
               <div>제목</div>
             </li>
-            <li class="day">
+            <li class="phone_col">
               <div>날짜</div>
             </li>
-            <li class="read">
+            <li class="read_col">
               <div>읽음 상태</div>
             </li>
           </ul>
         </nav>
-        <nav class="mark_list">
-          <ul>
-            <li><input type="checkbox"></li>
-            <li class="name">
-              <div>보낸 사람</div>
-            </li>
-            <li class="messeagetitle">
-              <div id="headline">제목</div>
-            </li>
-            <li class="day">
-              <div>날짜</div>
-            </li>
-            <li class="read">
-              <div>읽음 상태</div>
-            </li>
-          </ul>
-        </nav>
-        <nav class="mark_list">
-          <ul>
-            <li><input type="checkbox"></li>
-            <li class="name">
-              <div>보낸 사람</div>
-            </li>
-            <li class="messeagetitle">
-              <div id="headline">제목</div>
-            </li>
-            <li class="day">
-              <div>날짜</div>
-            </li>
-            <li class="read">
-              <div>읽음 상태</div>
-            </li>
-          </ul>
-        </nav>
-        <nav class="mark_list">
-          <ul>
-            <li><input type="checkbox"></li>
-            <li class="name">
-              <div>보낸 사람</div>
-            </li>
-            <li class="messeagetitle">
-              <div id="headline">제목</div>
-            </li>
-            <li class="day">
-              <div>날짜</div>
-            </li>
-            <li class="read">
-              <div>읽음 상태</div>
-            </li>
-          </ul>
-        </nav>
-        <nav class="mark_list">
-          <ul>
-            <li><input type="checkbox"></li>
-            <li class="name">
-              <div>보낸 사람</div>
-            </li>
-            <li class="messeagetitle">
-              <div id="headline">제목</div>
-            </li>
-            <li class="day">
-              <div>날짜</div>
-            </li>
-            <li class="read">
-              <div>읽음 상태</div>
-            </li>
-          </ul>
-        </nav>
+        <ul class="mark_list">
+        </ul>
+        
 
         <nav class="page">
           <ul>
@@ -136,7 +71,7 @@
           </ul>
         </nav>
         <div class="div_delete">
-          <button id="delete">삭제</button>
+          <button type="button" onclick="delMarks()" id="delete">삭제</button>
         </div>
       </div>
     </form>
@@ -152,14 +87,6 @@
       <div class="content">
         <div>쪽지 내용</div>
       </div>
-      <button id="deleteBtn">삭제</button>
-    </div>
-  </div>
-  
-  <div class="modal_delete">
-    <div class="modal-checkcontent">
-      <p>쪽지가 삭제되었습니다.</p>
-      <button id="deletecheckBtn">확인</button>
     </div>
   </div>
 
