--- a/webapp/header_main.html
+++ b/webapp/header_main.html
@@ -1,15 +1,15 @@
 <header id="site_header">
   <div>
     <span>
-      <a href="./../main.html">
-        <img src="./../assets/img/main/logoP.png">
+      <a href="./main.html">
+        <img src="./assets/img/main/logoP.png">
       </a>
     </span>
     <span>
-      <a href="./../login/login.html">
+      <a href="./app/login/login.html">
         로그인
       </a>
-      <a href="./../sign/terms.html">
+      <a href="./app/sign/terms.html">
         회원가입
       </a>
     </span>
@@ -18,42 +18,42 @@
     <ul>
       <li>
         <div>
-          <a href="./../map/map.html">
+          <a href="./app/map/map.html">
             · 지도
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./../subwayLine/subway.html">
+          <a href="./app/subwayLine/subway.html">
             · 지하철 노선도
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./../restaurant/restaurant.html">
+          <a href="./app/restaurant/restaurant.html">
             · 음식점 리스트
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./../news/news.html">
+          <a href="./app/news/news.html">
             · 뉴스 게시판
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./../post/postMain.html">
+          <a href="./app/post/postMain.html">
             · 일반 게시판
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./../careMember/careMember.html">
+          <a href="./app/careMember/careMember.html">
             · 돌봄 회원 리스트
           </a>
         </div>
