--- a/webapp/app/careMember/careMember.html
+++ b/webapp/app/careMember/careMember.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>함께 걸음</title>
   <link rel="stylesheet" href="./../../assets/css/careMember/careMember.css">
+  <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
