250812 1410 황승우 사이드바 수정

--- a/webapp/app/admin/sidebar.html
+++ b/webapp/app/admin/sidebar.html
@@ -1,50 +1,68 @@
-  <div class="sidebar">
-    <ul>
-      <div class="blank"></div>
+<div class="sidebar">
+  <ul>
+    <div class="blank"></div>
+    <li class="side_attach">
       <a href="./../../app/admin/userManager.html">
-        <li class="side_attach">회원관리</li>
+        회원관리
       </a>
-      <div class="board">
-        <li class="side_attach">일반 게시글 관리</li>
-        <ul class="side_menu side_normal_board">
+    </li>
+    <div class="board">
+      <li class="side_attach">일반 게시글 관리</li>
+      <ul class="side_menu side_normal_board">
+        <li class="side_attach">
           <a href="./../../app/admin/notice.html">
-            <li class="side_attach">공지사항 관리</li>
+            공지사항 관리
           </a>
+        </li>
+        <li class="side_attach">
           <a href="./../../app/admin/report.html">
-            <li class="side_attach">신고글 관리</li>
+            신고글 관리
           </a>
-        </ul>
-      </div>
-      </a>
-      <div class="board">
-        <li class="side_attach">뉴스 게시글 관리</li>
-        <ul class="side_menu side_news_board">
+        </li>
+      </ul>
+    </div>
+    </a>
+    <div class="board">
+      <li class="side_attach">뉴스 게시글 관리</li>
+      <ul class="side_menu side_news_board">
+        <li class="side_attach">
           <a href="./../../app/admin/newsBoard.html">
-            <li class="side_attach">뉴스 게시물</li>
+            뉴스 게시물
           </a>
+        </li>
+        <li class="side_attach">
           <a href="./../../app/admin/bannerBoard.html">
-            <li class="side_attach">배너 게시물</li>
+            배너 게시물
           </a>
-        </ul>
-      </div>
+        </li>
+      </ul>
+    </div>
+    <li class="side_attach">
       <a href="./../../app/admin/refund.html">
-        <li class="side_attach">돌봄회원 환급 관리</li>
+        돌봄회원 환급 관리
       </a>
-      <div class="board">
-        <li class="side_attach">돌봄 회원 신청</li>
-        <ul class="side_menu side_news_board">
+    </li>
+    <div class="board">
+      <li class="side_attach">돌봄 회원 신청</li>
+      <ul class="side_menu side_news_board">
+        <li class="side_attach">
           <a href="./../../app/admin/careRequest.html">
-            <li class="side_attach">신청 관리</li>
+            신청 관리
           </a>
+        </li>
+        <li class="side_attach">
           <a href="./../../app/admin/careCareer.html">
-            <li class="side_attach">수정 관리</li>
+            수정 관리
           </a>
-        </ul>
-      </div>
+        </li>
+      </ul>
+    </div>
+    <li class="side_attach">
       <a href="qeustion.html">
-        <li class="side_attach">1:1 문의사항</li>
+        1:1 문의사항
       </a>
-    </ul>
-  </div>
+    </li>
+  </ul>
+</div>
 
 </html>
