--- a/webapp/app/modal/modalUpdate.html
+++ b/webapp/app/modal/modalUpdate.html
@@ -5,7 +5,7 @@
         <img
           onclick="modalUpdateNone()"
           class="modal_x"
-          src="./../../assets/img/main/xIcon.png"
+          src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png"
         />
       </div>
       <p id="modal_text">수정완료</p>
