--- a/webapp/app/modal/modalCareModifyFinished.html
+++ b/webapp/app/modal/modalCareModifyFinished.html
@@ -2,7 +2,7 @@
   <div class="modal_window">
     <div class="modal_body_confirm">
       <div class="modal_x_box">
-        <img onclick="modalCareModifyFinishedNone()" class="modal_x" src="./../../assets/img/main/xIcon.png">
+        <img onclick="modalCareModifyFinishedNone()" class="modal_x" src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png">
       </div>
       <p id="modal_text">
         돌봄 회원 수정이 완료되었습니다.
