--- a/webapp/app/modal/modalCareModifyRejected.html
+++ b/webapp/app/modal/modalCareModifyRejected.html
@@ -2,7 +2,7 @@
   <div class="modal_window">
     <div class="modal_body_confirm">
       <div class="modal_x_box">
-        <img onclick="modalCareModifyRejectedNone()" class="modal_x" src="./../../assets/img/main/xIcon.png">
+        <img onclick="modalCareModifyRejectedNone()" class="modal_x" src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png">
       </div>
       <p id="modal_text">
         돌봄 회원 수정 신청이 반려되었습니다.
