250812 17:25 장성주 지하철 목록 버튼 추가

--- a/webapp/app/myPageCare/careModify.html
+++ b/webapp/app/myPageCare/careModify.html
@@ -81,7 +81,7 @@
             <li class="member">
               <ul>
                 <li class="info">전화번호</li>
-                <li class="myinfo"><div>010-1234-5678</div><button>수정</button></li>
+                <li class="myinfo"><input type="text" placeholder="010-1234-5678"><button>수정</button></li>
               </ul>
             </li>
             <!-- 아이디를 보여주는 칸 -->
