--- a/webapp/app/myPageCare/carePost.html
+++ b/webapp/app/myPageCare/carePost.html
@@ -43,6 +43,7 @@
             <li>작성한 게시글 목록</li>
           </ul>
         </nav>
+        <!-- 페이지 분류 제목 -->
         <nav class="mark_nav">
           <ul>
             <li><input type="checkbox"></li>
@@ -57,6 +58,7 @@
             </li>
           </ul>
         </nav>
+        <!-- 게시글 글 목록 -->
         <nav class="mark_list">
             <ul>
               <li><input type="checkbox"></li>
@@ -72,49 +74,55 @@
           
           </ul>
         </nav>
-        <nav class="mark_list">
-          <ul>
-            <li><input type="checkbox"></li>
-            <li class="name"><a href="">
-                <div>작성자</div>
-              </a></li>
-            <li class="posttitle"><a href="">
-                <div>제목</div>
-              </a></li>
-            <li class="day"><a href="">
-                <div>날짜</div>
-              </a></li>
-          </ul>
-        </nav>
-        <nav class="mark_list">
-          <ul>
-            <li><input type="checkbox"></li>
-            <li class="name"><a href="">
-                <div>작성자</div>
-              </a></li>
-            <li class="posttitle"><a href="">
-                <div>제목</div>
-              </a></li>
-            <li class="day"><a href="">
-                <div>날짜</div>
-              </a></li>
-          </ul>
-        </nav>
-        <nav class="mark_list">
-          <ul>
-            <li><input type="checkbox"></li>
-            <li class="name"><a href="">
-                <div>작성자</div>
-              </a></li>
-            <li class="posttitle"><a href="">
-                <div>제목</div>
-              </a></li>
-            <li class="day"><a href="">
-                <div>날짜</div>
-              </a></li>
-          </ul>
-        </nav>
+                <!-- 게시글 글 목록 -->
 
+        <nav class="mark_list">
+          <ul>
+            <li><input type="checkbox"></li>
+            <li class="name"><a href="">
+                <div>작성자</div>
+              </a></li>
+            <li class="posttitle"><a href="">
+                <div>제목</div>
+              </a></li>
+            <li class="day"><a href="">
+                <div>날짜</div>
+              </a></li>
+          </ul>
+        </nav>
+                <!-- 게시글 글 목록 -->
+
+        <nav class="mark_list">
+          <ul>
+            <li><input type="checkbox"></li>
+            <li class="name"><a href="">
+                <div>작성자</div>
+              </a></li>
+            <li class="posttitle"><a href="">
+                <div>제목</div>
+              </a></li>
+            <li class="day"><a href="">
+                <div>날짜</div>
+              </a></li>
+          </ul>
+        </nav>
+                <!-- 게시글 글 목록 -->
+
+        <nav class="mark_list">
+          <ul>
+            <li><input type="checkbox"></li>
+            <li class="name"><a href="">
+                <div>작성자</div>
+              </a></li>
+            <li class="posttitle"><a href="">
+                <div>제목</div>
+              </a></li>
+            <li class="day"><a href="">
+                <div>날짜</div>
+              </a></li>
+          </ul>
+        </nav>
+<!-- 페이지네이션 -->
         <nav class="page">
           <ul>
             <a href="">
@@ -137,12 +145,14 @@
             </a>
           </ul>
         </nav>
+        <!-- 버튼 삭제 버튼 -->
         <div class="div_delete">
           <button class="btn_list_delete">삭제</button>
         </div>
       </div>
 
   </main>
+  <!-- 게시글 삭제 모달 -->
   <div class="modal" id="deleteModal">
     <div class="modal_box">
       <p>정말로 게시글을 삭제하시겠습니까?</p>
@@ -152,7 +162,7 @@
       </div>
     </div>
   </div>
-
+<!-- 게시글 삭제 확인 버튼 클릭시 출력 모달 -->
   <div class="modal" id="chek_deleteModal">
     <div class="modal_box">
       <p>게시글이 삭제 되었습니다.</p>
@@ -161,7 +171,7 @@
       </div>
     </div>
   </div>
-
+<!-- 체크 박스에 표시 없을 때 확인 -->
   <div class="modal" id="checkModal">
     <div class="modal_box">
       <p>삭제할 쪽지를 선택하세요</p>
