--- a/webapp/app/myPageCare/carePostDP.html
+++ b/webapp/app/myPageCare/carePostDP.html
@@ -19,6 +19,7 @@
 
 
     <section class="post_dp">
+      <!-- 게시판 디테일 페이지 -->
       <div class="title">
         <h2>안녕하세요</h2>
       </div>
@@ -27,6 +28,7 @@
         <span>등록일 : 2025-08-04</span><br>
         <span>조회수 : 4</span>
       </div>
+      <!-- 게시글 내용 -->
       <div class="post_content">
         안녕하세요
       </div>
@@ -35,7 +37,7 @@
         <a class="btn_delete" href="#deleteModal">삭제</a>
         <a class="btn_retry" href="./carePostRe.html" id="editLink">수정</a>
       </div>
-
+<!-- 게시글 댓글 내용 -->
       <section class="reply">
         <h4>댓글 [1]</h4>
         <hr>
@@ -44,7 +46,7 @@
           <div class="cmt_content">반갑다내이름은박찬호고나는LA다저스에있을때부..</div>
           <div class="date">2025-08-02</div>
         </div>
-
+<!-- 게시글 댓글 작성 칸 -->
         <div class="comments">
           <form action="" method="get">
             댓글작성 <br>
@@ -56,6 +58,7 @@
       </section>
     </section>
   </main>
+  <!-- 삭제 버튼 클릭시 출력 모달 -->
   <div class="modal" id="deleteModal">
     <div class="modal_box">
       <p>정말로 게시글을 삭제하시겠습니까?</p>
