--- a/webapp/app/myPageCare/careReference.html
+++ b/webapp/app/myPageCare/careReference.html
@@ -41,7 +41,7 @@
         </ul>
 
       </nav>
-      <!-- 페이지 세부 정보 -->
+      <!-- 페이지 분류 정보 -->
 
       <nav class="mark_nav">
         <ul>
@@ -57,6 +57,7 @@
             </li>
           </ul>
       </nav>
+      <!-- 페이지 상세 내용 -->
       <nav class="mark_list">
             <ul>
               <li><input type="checkbox"></li>
@@ -72,6 +73,7 @@
           
           </ul>
         </nav>
+        <!-- 페이지 네이션 -->
       <nav class="page">
         <ul>
           <li>&lt;</li>
@@ -84,6 +86,7 @@
         </ul>
 
       </nav>
+      <!-- 등록 버튼 클릭시 a태그로 이동 -->
       <div class="div_delete">
         <a href="./careReferenceDP.html"><button>등록</button></a>
       </div>
