--- a/webapp/app/myPageCare/careReferenceCheck.html
+++ b/webapp/app/myPageCare/careReferenceCheck.html
@@ -31,7 +31,7 @@
 
         아무개올림
       </div>
-
+<!-- 관리자 답변 내용 -->
       <section class="reply">
         <div class="comment">
           <div class="author">관리자</div>
@@ -39,8 +39,9 @@
           <div class="date">2025-08-02</div>
         </div>
       </section>
-
+<!-- 버튼 클릭시 a태그 링클 이동 -->
       <div class="buttons">
+        
         <a class="btn_list" href="./careReference.html">목록</a>
 
       </div>
