--- a/webapp/app/myPageCare/careReferenceDP.html
+++ b/webapp/app/myPageCare/careReferenceDP.html
@@ -37,7 +37,7 @@
         <input type="text">
 
       </div>
-
+<!-- 페이지 세부 정보 안내 -->
       <div class="reference_info">
         <span>등록자명 : 아무개</span>
         <span>등록일 : 2025-08-04</span><br>
@@ -47,9 +47,11 @@
         <textarea name="" id=""></textarea>
 
       </div>
+      <!-- 문의 사항 입력 칸 -->
       <div class="re_post_content">
         <textarea id="contentInput" placeholder="내용을 입력하세요"></textarea>
       </div>
+      <!-- 문의사항 버튼 -->
       <div class="buttons">
         <a class="btn_list" href="./careReference.html">목록</a>
         <a class="btn_cancle" href="./careReference.html">취소</a>
@@ -60,6 +62,7 @@
   <footer>
 
   </footer>
+  <!-- 등록 버튼 클릭 시 출력 모달 -->
   <div class="modal" id="editModal" ;>
     <div class="modal_box">
       <p>문의가 등록 되었습니다.</p>
