--- a/webapp/app/subwayLine/dongjack.html
+++ b/webapp/app/subwayLine/dongjack.html
@@ -17,6 +17,8 @@
   <main>
 
     <div class="station_info">
+      <!-- 해당 지하철 역 사진 -->
+
       <div class="station_img">
         <img src="./../../assets/img/subwayLine/dongjack.png" alt="">
       </div>
@@ -27,7 +29,7 @@
       </div>
 
       <div class="line_number">
-        <img src="./../../assets/img/subwayLine/Line_4.png" alt="" >
+        <img src="./../../assets/img/subwayLine/Line_4.png" alt="">
         <img src="./../../assets/img/subwayLine/Line_9.png" alt="">
       </div>
     </div>
@@ -37,6 +39,8 @@
       <div>
         <img src="./../../assets/img/subwayLine/KakaoTalk_20250806_170707522_07.png" alt="">
       </div>
+      <a href="./subway.html"><button>목록</button></a>
+
     </div>
 
 
