--- a/webapp/app/subwayLine/subway.html
+++ b/webapp/app/subwayLine/subway.html
@@ -28,33 +28,41 @@
         <button id="dxline"> 신분당선 </button>
       </div>
     </div>
+    <!-- 서초 전체 지하철 노선도 -->
     <div class="map_section">
       <div class="subway_allline_img">
         <img src="./../../assets/img/subwayLine/allline.png" alt="전체호선사진">
       </div>
+      <!-- 서초 2호선 지하철 노선도 -->
       <div class="subway_line2_img">
         <img src="./../../assets/img/subwayLine/line2.png" alt="2호선사진">
       </div>
+      <!-- 서초 3호선 지하철 노선도 -->
       <div class="subway_line3_img">
         <img src="./../../assets/img/subwayLine/line3.png" alt="3호선사진">
       </div>
+      <!-- 서초 4호선 지하철 노선도 -->
       <div class="subway_line4_img">
         <img src="./../../assets/img/subwayLine/line4.png" alt="4호선사진">
       </div>
+      <!-- 서초 7호선 지하철 노선도 -->
       <div class="subway_line7_img">
         <img src="./../../assets/img/subwayLine/line7.png" alt="7호선사진">
       </div>
+      <!-- 서초 9호선 지하철 노선도 -->
       <div class="subway_line9_img">
         <img src="./../../assets/img/subwayLine/line9.png" alt="9호선사진">
       </div>
+      <!-- 서초 신분당선 지하철 노선도 -->
       <div class="subway_dxline_img">
         <img src="./../../assets/img/subwayLine/dxline.png" alt="신분당선사진">
       </div>
 
+      <!-- 전체 역 목록 -->
       <div class="station_list" id="allline_station">
         <h3>전체 역 목록</h3>
         <ul>
-          
+          <!-- 서초 지나가는 역 이름, 정보 칸 -->
           <li class="station_name"><a href="./../../app/subwayLine/dongjack.html">동작</a></li>
           <li class="station_name"><a href="./../../app/subwayLine/gubanpo.html">구반포</a></li>
           <li class="station-name"><a href="./../../app/subwayLine/shinbanpo.html">신반포</a></li>
@@ -80,6 +88,8 @@
       </div>
 
       <div class="station_list" id="line2_stations">
+        <!-- 서초 2호선 이름, 정보 칸 -->
+
         <h3>2호선 역 목록</h3>
         <ul>
           <li class="station_name"><a href="./../../app/subwayLine/sadang.html">사당</a></li>
@@ -91,6 +101,7 @@
       </div>
 
       <div class="station_list" id="line3_stations">
+        <!-- 서초 3호선 이름, 정보 칸 -->
         <h3>3호선 역 목록</h3>
         <ul>
           <li class="station_name"><a href="./../../app/subwayLine/shinsa.html">신사</a></li>
@@ -103,6 +114,7 @@
       </div>
 
       <div class="station_list" id="line4_stations">
+        <!-- 서초 4호선 이름, 정보 칸 -->
         <h3>4호선 역 목록</h3>
         <ul>
           <li class="station_name"><a href="./../../app/subwayLine/dongjack.html">동작</a></li>
@@ -112,6 +124,7 @@
       </div>
 
       <div class="station_list" id="line7_stations">
+        <!-- 서초 7호선 이름, 정보 칸 -->
         <h3>7호선 역 목록</h3>
         <ul>
           <li class="station_name"><a href="./../../app/subwayLine/chungshindae.html">총신대입구</a></li>
@@ -123,6 +136,7 @@
       </div>
 
       <div class="station_list" id="line9_stations">
+        <!-- 서초 9호선 이름, 정보 칸 -->
         <h3>9호선 역 목록</h3>
         <ul>
           <li class="station_name"><a href="./../../app/subwayLine/dongjack.html">동작</a></li>
@@ -135,6 +149,7 @@
       </div>
 
       <div class="station_list" id="dxline_stations">
+        <!-- 서초 신분당선 이름, 정보 칸 -->
         <h3>신분당선 역 목록</h3>
         <ul>
           <li class="station_name"><a href="./../../app/subwayLine/shinsa.html">신사</a></li>
