--- a/webapp/app/myPageCare/carePostRe.html
+++ b/webapp/app/myPageCare/carePostRe.html
@@ -27,14 +27,15 @@
         <span>등록일 : 2025-08-04</span><br>
         <span>조회수 : 4</span>
       </div>
-
+<!-- 게시글의 api 사용 부분 -->
       <div class="tools">
         <textarea name="" id=""></textarea>
       </div>
-      
+      <!-- 게시글 내용 입력 부분 -->
       <div class="re_post_content">
         <textarea id="contentInput" placeholder="내용을 입력하세요"></textarea>
       </div>
+      <!-- 게시글 수정 완료, 취소, 목록 버튼 -->
       <div class="buttons">
         <a class="btn_list" href="./carePost.html">목록</a>
         <a class="btn_cancle" href="./carePostDP.html">취소</a>
@@ -42,7 +43,7 @@
       </div>
     </section>
   </main>
-
+<!-- 수정 완료 모달 -->
   <div id="proposeSuccessModal" class="modal">
     <div class="modal-content">
       <p>수정이 완료되었습니다.</p>
