--- a/webapp/app/subwayLine/bangbae.html
+++ b/webapp/app/subwayLine/bangbae.html
@@ -15,8 +15,9 @@
   <div id="header"></div>
 
   <main>
-
     <div class="station_info">
+      <!-- 해당 지하철 역 사진 -->
+
       <div class="station_img">
         <img src="./../../assets/img/subwayLine/bangbae.png" alt="">
       </div>
@@ -27,7 +28,7 @@
       </div>
 
       <div class="line_number">
-        <img src="./../../assets/img/subwayLine/Line_2.png" alt="" >
+        <img src="./../../assets/img/subwayLine/Line_2.png" alt="">
       </div>
     </div>
 
@@ -36,6 +37,7 @@
       <div>
         <img src="./../../assets/img/subwayLine/KakaoTalk_20250806_170707522_07.png" alt="">
       </div>
+      <a href="./subway.html"><button>목록</button></a>
     </div>
 
 
