250812 17:25 잡다한거 수정중

--- a/webapp/app/myPageNormal/normalModify.html
+++ b/webapp/app/myPageNormal/normalModify.html
@@ -76,7 +76,7 @@
             <li class="member">
               <ul>
                 <li class="info">전화번호</li>
-                <li class="myinfo"><div>010-1234-5678</div><button id="phonebutton">수정</button></li>
+                <li class="myinfo"><div>010-1234-5678</div></li>
               </ul>
             </li>
             <li class="member">
