--- a/webapp/app/myPageNormal/normalheart.html
+++ b/webapp/app/myPageNormal/normalheart.html
@@ -31,7 +31,7 @@
     <form action="" method="get">
       <!-- 메뉴 제목 -->
       <div class="div_mark">
-        <div class="title">찜한 목록</div>
+        <div class="title">하트 목록</div>
       </div>
       <!-- 찜한 목록 섹션 -->
       <div class="context">
