250812 1727 황승우 관리자 css 수정

--- a/webapp/app/admin/notice.html
+++ b/webapp/app/admin/notice.html
@@ -47,8 +47,8 @@
               <div class="board_head board_cnt">조회수</div>
               <div class="board_head board_date">작성일</div>
             </div>
-            <div class="table">
-              <div class="table">
+            <div class="table_big">
+              <div class="table_md">
                 <ul class="table_body">
                   <li class="body_number"><a href="./../../app/admin/noticeDetail.html">1</a></li>
                   <li class="body_content">
