--- a/webapp/app/admin/report.html
+++ b/webapp/app/admin/report.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>공지사항 관리</title>
+    <title>신고글 관리</title>
     <link rel="stylesheet" href="./../../assets/css/admin/" />
     <link rel="stylesheet" href="./../../assets/css/header.css" />
     <link rel="stylesheet" href="./../../assets/css/footer.css" />
@@ -21,7 +21,7 @@
       <section class="userManager">
         <div class="searchcontent">
           <div class="title">
-            <h1>공지사항 관리</h1>
+            <h1>신고글 관리</h1>
           </div>
           <div class="table">
             <div class="board_column">
