250812 23:20 이재빈 게시판 js중

--- a/webapp/app/myPageNormal/normalMatching.html
+++ b/webapp/app/myPageNormal/normalMatching.html
@@ -12,6 +12,7 @@
 <body>
   <div id="header"></div>
   <main>
+    <!-- 메뉴 사이드바 섹션 -->
     <nav class="main_sidebar">
       <ul>
         <li><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></li>
@@ -27,8 +28,10 @@
       </ul>
     </nav>
     <div class="div_mark">
+      <!-- 메뉴 제목 -->
       <div class="title">매칭 기록</div>
       <form action="" method="get">
+        <!-- 월 표시 -->
         <nav class="month">
           <ul>
             <li><a href="">1월</a></li>
@@ -45,6 +48,7 @@
             <li><a href="">12월</a></li>
           </ul>
         </nav>
+        <!-- 매칭 기록 표시 섹션 -->
         <nav class="matching">
           <ul>
             <li>
@@ -57,6 +61,7 @@
             </li>
           </ul>
         </nav>
+        <!-- 매칭 기록 표시 섹션 -->
         <nav class="matching">
           <ul>
             <li>
@@ -69,6 +74,7 @@
             </li>
           </ul>
         </nav>
+        <!-- 매칭 기록 표시 섹션 -->
         <nav class="matching">
           <ul>
             <li>
@@ -81,6 +87,7 @@
             </li>
           </ul>
         </nav>
+        <!-- 페이지네이션 -->
         <nav class="page">
           <ul>
             <li><a href="">&lt;</a></li>
