--- a/webapp/app/myPageNormal/normalQuit.html
+++ b/webapp/app/myPageNormal/normalQuit.html
@@ -16,6 +16,7 @@
 <body>
   <div id="header"></div>
   <main>
+    <!-- 메뉴 사이드바 섹션 -->
     <nav class="main_sidebar">
       <ul>
         <li><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></li>
@@ -31,18 +32,20 @@
       </ul>
     </nav>
     <div class="div_mark">
+      <!-- 메뉴 제목 -->
       <div class="title">회원 탈퇴</div>
+      <!-- 주의사항 표시 -->
       <div class="arlim">
-        <div></div>
         <nav>
           <ul>
-            <li>· 더 이상의 이용을 원하지 않는 불필요한 사이트의 대한 회원 탈퇴 처리</li>
+            <li>🛈 더 이상의 이용을 원하지 않는 불필요한 사이트의 대한 회원 탈퇴 처리</li>
             <li class="li_color">· 본 서비스는 본인인증 내역을 기반으로 제공되는 서비스로, 회원 탈퇴시 60일간 회원가입이 불가하며 그에 따른 불이익은 책임 지지 않습니다. </li>
             <li class="li_color">· 회원 탈퇴시 보유한 포인트는 전부 소멸 됩니다.</li>
           </ul>
         </nav>
       </div>
       <form action="" method="get">
+        <!-- 회원 탈퇴 박스 -->
         <div class="exit-box">
           <div class="exit-row">
             <div class="exit-label">탈퇴 날짜</div>
@@ -61,6 +64,7 @@
             </div>
           </div>
         </div>
+        <!-- 탈퇴하기 버튼 -->
         <button type="button" onclick="openQuitModal()" id="next">다음</button>
       </form>
     </div>
