--- a/webapp/app/myPageNormal/normalReferenceDetail.html
+++ b/webapp/app/myPageNormal/normalReferenceDetail.html
@@ -14,8 +14,7 @@
 <body>
   <div id="header"></div>
   <main>
-
-
+    <!-- 작성한 문의사항 디테일 페이지 -->
     <section class="careReferenceCheck">
       <div class="title">
         <h2>안녕하세요</h2>
@@ -30,7 +29,7 @@
 
         아무개올림
       </div>
-
+      <!-- 관리자가 달아준 문의 답변 -->
       <section class="reply">
         <div class="comment">
           <div class="author">관리자</div>
@@ -38,7 +37,7 @@
           <div class="date">2025-08-02</div>
         </div>
       </section>
-
+      <!-- 문의 목록으로 가는 버튼 -->
       <div class="buttons">
         <a href="./normalReference.html"><button class="btn_list">목록</button>
       </div></a>
