--- a/webapp/app/myPageNormal/normalReferenceUp.html
+++ b/webapp/app/myPageNormal/normalReferenceUp.html
@@ -15,7 +15,7 @@
 <body>
   <div id="header"></div>
   <main>
-
+    <!-- 문의 작성 디테일 페이지 -->
     <section class="reference_dp">
       <div class="title">
         <h2>[문의] 다크모드 요청</h2>
@@ -25,7 +25,6 @@
         <span>등록일 : 2025-08-04</span><br>
       </div>
       <div class="tools">
-        <!-- 이거 어케 할지 질문 --> 
       </div>
       <div class="reference_content">
         <textarea></textarea>
@@ -37,9 +36,7 @@
       </div>
     </section>
   </main>
-  <footer>
-
-  </footer>
+  <!-- 문의사항 등록 확인 모달 -->
   <div class="modal" id="editModal">
     <div class="modal_box">
       <p>문의가 등록 되었습니다.</p>
@@ -48,10 +45,6 @@
       </div>
     </div>
   </div>
-
   <div id="footer"></div>
-
-
 </body>
-
 </html>
