--- a/webapp/app/myPageNormal/normalMark.html
+++ b/webapp/app/myPageNormal/normalMark.html
@@ -15,10 +15,11 @@
 <body>
   <div id="header"></div>
   <main>
+    <!-- 메뉴 사이드바 섹션 -->
     <nav class="main_sidebar">
       <ul>
         <li><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></li>
-        <li><a href="./normalModify.html">개인정보 수정</a></li>
+        <li><a href="./normalPwCheck.html">개인정보 수정</a></li>
         <li><a href="./normalMark.html">찜한 목록</a></li>
         <li><a href="./normalheart.html">하트 목록</a></li>
         <li><a href="./normalMatching.html">매칭 기록</a></li>
@@ -31,7 +32,9 @@
     </nav>
     <form action="" method="get">
       <div class="div_mark">
+        <!-- 메뉴 제목 -->
         <div class="title">찜한 목록</div>
+        <!-- 하트목록 컬럼 -->
         <nav class="mark_nav">
           <ul>
             <li><input onclick="toggleMarksAll()" id="checkbox_col" name="mark_check_col" type="checkbox"></li>
@@ -46,8 +49,10 @@
             </li>
           </ul>
         </nav>
+        <!-- 하트목록 리스트 -->
         <ul class="mark_list">
         </ul>
+        <!-- 페이지네이션 -->
         <div>
           <ul class="page">
             <li><a href="">&lt;</a></li>
@@ -58,6 +63,7 @@
             <li><a href="">&gt;</a></li>
           </ul>
         </div>
+        <!-- 찜 삭제 버튼 -->
         <div class="div_delete">
           <button type="button" onclick="delMarks()">찜 삭제</button>
         </div>
