--- a/webapp/app/myPageNormal/normalReference.html
+++ b/webapp/app/myPageNormal/normalReference.html
@@ -12,6 +12,7 @@
 <body>
   <div id="header"></div>
   <main>
+    <!-- 메뉴 사이드바 섹션 -->
     <nav class="main_sidebar">
       <ul>
         <li><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></li>
@@ -28,12 +29,14 @@
     </nav>
     <form action="" method="get">
       <div class="div_mark">
+        <!-- 메뉴 제목 -->
         <div class="title">1 대 1 문의</div>
         <nav class="div_choose">
           <ul>
             <li>1 대 1 문의 목록</li>
           </ul>
         </nav>
+        <!-- 문의 목록 컬럼 -->
         <nav class="mark_nav">
           <ul>
             <li class="name">
@@ -50,6 +53,7 @@
             </li>
           </ul>
         </nav>
+        <!-- 문의 목록 리스트 -->
         <nav class="mark_list">
           <ul>
             <li class="name">
@@ -114,7 +118,7 @@
             </li>
           </ul>
         </nav>
-
+        <!-- 페이지네이션 -->
         <nav class="page">
           <ul>
             <li><a href="">&lt;</a></li>
@@ -125,6 +129,7 @@
             <li><a href="">&gt;</a></li>
           </ul>
         </nav>
+        <!-- 문의 등록하기 버튼 -->
         <div class="div_delete">
           <button><a href="./normalReferenceUp.html">등록</a></button>
         </div>
