250812 23:55 장성주 주석달기 완료

--- a/webapp/app/myPageCare/careExit.html
+++ b/webapp/app/myPageCare/careExit.html
@@ -60,7 +60,7 @@
           </div>
         </div>
       </div>
-<!-- 드롭다운으로 표시할 것들 -->
+<!-- 탈퇴 사유의 유무 존재 확인-->
       <div class="exit-button-area">
         <button class="exit-button" type="button">다음</button>
         <p id="reasonError" class="error-text">탈퇴사유를 꼭 입력해주세요</p>
