--- a/webapp/app/myPageCare/careProfile.html
+++ b/webapp/app/myPageCare/careProfile.html
@@ -142,6 +142,13 @@
       <button id="saveConfirmBtn">확인</button>
     </div>
   </div>
+  <!-- 우편번호 찾기 모달 -->
+  <div id="findModal" class="modal">
+    <div class="modal-content">
+      <p>우편번호 찾기 api</p>
+      <button id="saveConfirmBtn">확인</button>
+    </div>
+  </div>
   <div id="footer"></div>
 
 
