--- a/webapp/app/myPageCare/careModify.html
+++ b/webapp/app/myPageCare/careModify.html
@@ -121,6 +121,12 @@
       <button id="saveConfirmBtn">확인</button>
     </div>
   </div>
+  <div id="findModal" class="modal">
+    <div class="modal-content">
+      <p>우편번호 찾기 api</p>
+      <button id="saveConfirmBtn">확인</button>
+    </div>
+  </div>
   <div id="footer"></div>
 </body>
 </html>
